# spnl

./: .gitignore  Cargo.toml  README.md  README_PIC.md  pyproject.toml
.github/scripts/: free-up-disk-space-fast.sh
.github/workflows/: PATH-FILTERING-GUIDE.md  cli-image-build-callable.yml  cli-image-build-ollama.yml  cli-image-build.yml  core.yml  llm-d-image-build.yml  playground.yml  publish_crate.yml  publish_pypi.yml  python.yml  release-cli.yml  vllm-gce.yml
Formula/: spnl.rb
benchmarks/haystack/: Cargo.toml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
cli/src/bench/: haystack.rs  mod.rs  niah.rs  pic.rs  ragcsv.rs  ruler.rs
crates/spnl/: Cargo.toml
crates/spnl-cli/: Cargo.toml
crates/spnl-core/: Cargo.toml
crates/spnl-ffi/: Cargo.toml  pyproject.toml
crates/spnl-run/: Cargo.toml
docker/gce/vllm/: cloud-config.yaml  create-vllm-gce-image.sh  main.tf  setup-dev.sh  setup.sh  up.sh
docker/llm-d/: Containerfile.cuda
docker/vllm/llm-d/: Containerfile.cuda  clone.sh  genpatch.sh
docs/: cli.md  feature-flags.md
haystack/: Cargo.toml
spnl/: Cargo.toml
spnl/benches/: BENCHMARK_PROGRESS.md  README-HAYSTACK.md  README-NIAH.md  README-RAGCSV.md  README-RULER.md  README.md  bench_progress.rs  mt_rag.rs  niah.rs  ragcsv.rs  ruler.rs
spnl/src/: execute.rs  lib.rs  pull.rs  python.rs  tokenize.rs
spnl/src/augment/: embed.rs  retrieve.rs
spnl/src/execute/: mod.rs  pull.rs
spnl/src/ffi/: python.rs
spnl/src/ir/: pretty_print.rs
web/: package-lock.json  package.json
web/playground/: package-lock.json  package.json
(+26 files in other folders)
