[workspace]
resolver = "3"
members = ["cli", "spnl"]
exclude = ["cli", "mistral.rs"]

[workspace.dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# For continued development of PIC work, uncomment:
# [patch."https://github.com/EricLBuehler/mistral.rs"]
# mistralrs = { path = "mistral.rs/mistralrs" }
# mistralrs-core = { path = "mistral.rs/mistralrs-core" }

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
